# hthforth

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README  TODO.org  hthforth.cabal  ppForth.cabal  ppforth.cabal
cbits/: bytestring.c
doc/: Design.tex  Functional.tex  Makefile
include/: bytestring.h
src/Forth/: Address.hs  Block.hs  Cell.hs  CellMemory.hs  Configuration.hs  Core.hs  Core.hs-boot  DataField.hs  Forth.hs  Input.hs  Machine.hs  Machine.hs-boot  Parser.hs  StreamFile.hs  Target.hs  Types.hs  Word.hs  Word.hs-boot  WordId.hs
src/Language/: Forth.hs
src/Language/Forth/: Address.hs  Block.hs  Cell.hs  CellMemory.hs  CellVal.hs  CellVal.hs-boot  CodeGenerate.hs  Compiler.hs  Core.hs  Core.hs-boot  CrossCompiler.hs  DataField.hs  Dictionary.hs  Forth.hs  Input.hs  Interpreter.hs  Machine.hs  Machine.hs-boot  Primitive.hs  StreamFile.hs  Target.hs  TargetPrimitive.hs  Types.hs  Word.hs  Word.hs-boot  WordId.hs
src/Language/Forth/CrossCompiler/: CodeGenerate.hs
src/Language/Forth/Interpreter/: Address.hs  CellMemory.hs  DataField.hs  Monad.hs  State.hs  State.hs-boot
src/Translator/: Expression.hs  Symbol.hs
src/Translator/Assembler/: Directive.hs  Generate.hs  InstructionSet.hs
src/Util/: Address.hs  ByteString.hs  Endian.hs  Memory.hs
src/lib/: core-ext.fs  core.fs  core.fth  string.fs  target-core.fs  tools-ext.fs
