Name:           hthforth
Cabal-Version:  >=1.6
Version:        1.1.1
Category:       Language
License:        BSD3
License-File:   LICENSE
Copyright:      (c) Håkan Thörngren
Author:         Håkan Thörngren
Maintainer:     Håkan Thörngren <hth313@gmail.com>
Synopsis:       A Forth-2012 System Subset
Description:    hthforth implements a subset of Forth-2012.
Homepage:       https://github.com/hth313/hthforth
Stability:      Experimental
Category:       Language
Build-Type:     Simple
extra-source-files:
        src/lib/core.fs
        src/lib/core-ext.fs

Library
  build-depends: base       >= 4     && < 4.8
               , blaze-builder >= 0.3
               , bytestring >= 0.10
               , containers >= 0.4
               , directory >= 1.1 && < 1.3
               , dlist >= 0.5
               , filepath >= 1.2
               , haskeline >= 0.7.0.0
               , lens >= 4.7
               , symbol >= 0.2
               , transformers >= 0.3 && < 0.5
               , vector >= 0.9
               , vector-bytestring >= 0.0.0.1

  ghc-options: -funbox-strict-fields -O2

  c-sources:        cbits/bytestring.c
  include-dirs:     include
  includes:         bytestring.h
  install-includes: bytestring.h

Executable hthforth
  hs-source-dirs: src
  main-is:        Language/Forth.hs

  ghc-options: -funbox-strict-fields -O2

  c-sources:        cbits/bytestring.c
  include-dirs:     include
  includes:         bytestring.h
  install-includes: bytestring.h
